<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:gravity="center">

    <!-- TODO: EDITTEXT?-->
      <!--TODO: paddings/margins e text sizes no dimens.xml -->
    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:importantForAutofill="no"
      android:inputType="text"
      android:maxLength="9"
      android:text="@string/equipa_a"
      android:textColor="@android:color/holo_green_dark"
      android:textSize="32sp"
      tools:ignore="LabelFor" />

    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:importantForAutofill="no"
      android:inputType="text"
      android:maxLength="9"
      android:text="@string/equipa_b"
      android:textColor="@android:color/holo_green_dark"
      android:textSize="32sp"
      tools:ignore="LabelFor" />

  </LinearLayout>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/resultado" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    <!-- TODO: naming conventions-->
    <TextView
      android:id="@+id/score_a"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/_0"
      android:textColor="@android:color/black"
      android:textSize="42sp" />

    <TextView
      android:id="@+id/score_b"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/_0"
      android:textColor="@android:color/black"
      android:textSize="42sp" />
  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:onClick="incrementA"
      android:text="@string/plus1" />

    <Button
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:onClick="incrementB"
      android:text="@string/plus1" />
  </LinearLayout>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="30dp"
    android:text="@string/faltas" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
      android:id="@+id/fouls_a"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/_0"
      android:textColor="@android:color/black"
      android:textSize="42sp" />

    <TextView
      android:id="@+id/fouls_b"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/_0"
      android:textColor="@android:color/black"
      android:textSize="42sp" />
  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:onClick="incrementFaultsA"
      android:text="@string/plus1" />

    <Button
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:onClick="incrementFaultsB"
      android:text="@string/plus1" />
  </LinearLayout>

  <Button
    android:id="@+id/button_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:onClick="reset"
    android:text="@string/reset" />
</LinearLayout>